--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,72 @@
 html, body {
   font-family: Calibri, sans-serif;
 }
+
+.container {
+  border: 2px solid orange;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.top-nav-bar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.top-nav-bar-logo {
+  /* font-weight: bold; */
+  /* font-size: 30px; */
+  padding: 5px 0px;
+}
+
+.top-nav-bar-demo {
+  font-weight: bold;
+  font-size: 30px;
+  padding: 5px 0px;
+}
+
+h1 {
+  padding: 10px 0px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+h2 {
+  padding: 8px 0px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+h3 {
+  padding: 6px 0px;
+  font-size: px;
+  font-weight: bold;
+}
+
+
+.session-form-container {
+  border: 2px solid red;
+  /* display: flex; */
+  padding: 5px;
+
+}
+
+.session-form-box {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid green;
+  padding: 10px;
+}
+
+.session-form {
+  border: 2px solid blue;
+}
+
+.session-input {
+  width: 50%;
+}
+
+input[type=submit] {
+
+}
