Add smaller logo file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,9 +31,8 @@ html, body {
 }
 
 .top-nav-bar-logo {
-  /* font-weight: bold; */
-  /* font-size: 30px; */
   padding: 5px 0px;
+  width: 200px;
 }
 
 .top-nav-bar-demo {
