--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,15 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
 
-    <% if current_user %>
-      <script>
-        window.currentUser = {
-          "id": <%= current_user.id %>,
-          "email": "<%= current_user.email %>"
-        };
-      </script>
-    <% end %>
+    <script type="text/javascript">
+      <% if logged_in? %>
+        window.currentUser = <%= render(
+          "api/users/user.json.jbuilder",
+          user: current_user
+        ).html_safe %>
+      <% end %>
+    </script>
+
   </head>
 
   <body>
