--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,16 +36,21 @@ html, body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 30px 0px;
   vertical-align: middle;
 }
 
 .top-nav-bar-logo {
+  padding: 20px 0px 0px 0px;
   vertical-align: middle;
+}
+
+.top-nav-bar-logo img {
+  width: 150px;
 }
 
 .top-nav-bar-demo {
   vertical-align: middle;
+  padding: 25px 0px 24px 0px;
 }
 
 .demo-buttons {
@@ -134,6 +139,10 @@ h4 {
   border-radius: 4px;
   background-color: #EEF2F3;
   border: 1px solid #EEF2F3;
+}
+
+.session-input:focus {
+  background-color: #f2f5f6;
 }
 
 
