--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the api/notebooks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.notebooks-overlay-container {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.notebooks-overlay-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: #ECECEC;
+}
+
+.notebooks-overlay-title {
+  color: #878787;
+}
