--- a/app/assets/stylesheets/api/left_nav.scss
+++ b/app/assets/stylesheets/api/left_nav.scss
@@ -2,26 +2,43 @@
 .left-nav-outer-container {
   height: 100%;
   width: 75px;
-  border-right: #ECECEC;
+  border-right: 1px solid #ECECEC;
   background: #F8F8F8;
 }
 
 .left-nav-inner-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
   margin: 0 auto;
+}
+
+.left-nav-logo img {
+  margin: 0 auto;
+  padding: 20px;
+  width: 35px;
 }
 
 .left-nav-buttons ul {
   display: flex;
   flex-direction: column;
-  padding: 10px 0px;
-  margin: 0 auto;
 }
 
+.left-nav-buttons ul li {
+  font-size: 10px;
+  padding: 10px;
+  margin: 0 auto;
+
+
+}
 
 .left-nav-logout {
   border-top: 1px solid #E1E1E1;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+.left-nav-logout button {
+  padding: 5px;
 }
