--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -5,7 +5,9 @@
 .notebooks-overlay-container {
   display: flex;
   flex-direction: column;
-
+  border-right: 3px solid rgba(236, 236, 236, 0.7);
+  // move width to modal once created
+  width: 460px;
 }
 
 .notebooks-overlay-header {
@@ -13,8 +15,49 @@
   justify-content: space-between;
   padding: 10px;
   border-bottom: #ECECEC;
+  font-size: 21px;
+  font-weight: 300;
 }
 
 .notebooks-overlay-title {
   color: #878787;
+}
+
+.notebooks-overlay-nbs-list ul li {
+}
+
+.notebooks-overlay-nbs-list ul li div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid #ECECEC;
+  margin: 0px 10px;
+  padding: 10px;
+}
+
+.notebooks-overlay-nbs-list ul li div:hover {
+  border-bottom: 1px solid transparent;
+}
+
+.notebooks-overlay-nbs-list ul li a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.notebooks-overlay-nbs-list ul li:hover {
+  background: #2DBE60;
+  color: #FFFFFF;
+}
+
+.notebook-create-form-container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.notebook-create-form-hr {
+  width: 124px;
+  margin: 18px auto 54px;
+  border-bottom: 1px solid #D9D9D9;
 }
