--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,7 @@ html, body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   font-size: 14px;
+  height: 100%;
 }
 
 .container {
