--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,6 +111,12 @@ h4 {
   font-size: 18px;
 }
 
+h6 {
+  font-size: 28px;
+  font-weight: 300;
+  color: #2DBE60;
+}
+
 
 .session-form-container {
   /* border: 2px solid red; */
