--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -10,13 +10,14 @@
   border-right: 3px solid rgba(236, 236, 236, 0.7);
   // move width to modal once created
   width: 460px;
+  height: 100%;
 }
 
 .notebooks-overlay-header {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
-  border-bottom: #ECECEC;
+  padding: 21px 24px 40px 24px;
+  border-bottom: 1px solid #ECECEC;
   font-size: 21px;
   font-weight: 300;
 }
