--- a/app/assets/stylesheets/session_page.scss
+++ b/app/assets/stylesheets/session_page.scss
@@ -138,21 +138,12 @@
 
 
 
-.notes-by-notebook-index-container {
-  width: 350px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 76px;
-}
-
 
 
 
 .note-show-container {
-  height: 100%;
-  width: 100%;
+  height: 600px;
+  width: 750px;
   position: relative;
   top: 0;
   bottom: 0;
@@ -165,4 +156,6 @@
   font-size: 28px;
   font-weight: 300;
   border: none;
+  padding: 0px 0px 20px 0px;
+  width: 600px;
 }
