Fix first load on Notebooks page

--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -52,6 +52,10 @@
   color: #FFFFFF;
 }
 
+.notebook-items {
+  overflow: scroll;
+}
+
 .notebook-create-form-container {
   margin: 0 auto;
   display: flex;
