--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -56,19 +56,7 @@
   overflow: scroll;
 }
 
-.notebook-create-form-container {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  left: 74px;
-}
 
-.notebook-create-form-hr {
-  width: 124px;
-  margin: 18px auto 54px;
-  border-bottom: 1px solid #D9D9D9;
-}
 
 // .notebook-show-container {
 //   border-right: 1px solid #ECECEC;
@@ -104,6 +92,54 @@
   font-weight: 300;
   font-size: 18px;
 }
+
+.notebook-preview-title {
+  color: #4A4A4A;
+  font-weight: 300;
+  font-size: 16px;
+  padding-bottom: 12px;
+}
+
+.notebook-preview-count {
+  color: #878787;
+  font-size: 11px;
+  font-weight: 400;
+}
+
+.notebook-preview-buttons {
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
+.notebook-create-form-outer-container {
+  border: 1px solid blue;
+  position: relative;
+  left: 540px;
+}
+
+.notebook-create-form-inner-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.notebook-create-form-header-logo img {
+  width: 40px;
+  margin-bottom: 24px;
+}
+
+.notebook-create-form-header-text {
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.notebook-create-form-hr {
+  width: 124px;
+  margin: 18px auto 54px;
+  border-bottom: 1px solid #D9D9D9;
+}
+
+
 
 // .notebook-show-list {
 //   display: flex;
