--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -26,6 +26,10 @@
   color: #878787;
 }
 
+.notebooks-overlay-create img {
+  width: 24px;
+}
+
 .notebooks-overlay-nbs-list .notebook-items div {
 }
 
@@ -109,18 +113,26 @@
 .notebook-preview-buttons {
   padding-top: 11px;
   padding-bottom: 11px;
+  text-decoration: none;
+  border: none;
+}
+
+.notebook-preview-buttons img {
+  height: 24px;
+  width: 24px;
 }
 
 .notebook-create-form-outer-container {
-  border: 1px solid blue;
   position: relative;
   left: 540px;
+  width: 720px;
+  padding-top: 125px;
 }
 
 .notebook-create-form-inner-container {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
+  align-items: center;
 }
 
 .notebook-create-form-header-logo img {
@@ -129,8 +141,9 @@
 }
 
 .notebook-create-form-header-text {
+  color: #878787;
   font-size: 13px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .notebook-create-form-hr {
@@ -139,7 +152,54 @@
   border-bottom: 1px solid #D9D9D9;
 }
 
+.notebook-create-form-inner-container form {
+  display: flex;
+  flex-direction: column;
+}
 
+.notebook-create-form-inner-container form div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.notebook-create-form-inner-container form input[type="text"] {
+  padding: 20px 0px 60px 0px;
+  color: #383838;
+  font-size: 32px;
+  font-weight: 300;
+  border: none;
+  text-align: center;
+}
+
+.notebook-create-form-inner-container form input[type="submit"] {
+  background-color: #2DBE60;
+  color: #FFFFFF;
+  border: 1px solid #2DBE60;
+  border-radius: 5px;
+  padding: 9px 14px;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.notebook-create-form-inner-container form input[type="submit"]:hover {
+  background-color: #28A955;
+}
+
+.notebook-create-form-inner-container form button {
+  background-color: #ECECEC;
+  color: #606060;
+  border: 1px solid #D1D1D1;
+  border-radius: 5px;
+  padding: 9px 14px;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.notebook-create-form-inner-container form button:hover {
+  background-color: #D9D9D9;
+}
 
 // .notebook-show-list {
 //   display: flex;
