--- a/app/assets/stylesheets/api/notes.scss
+++ b/app/assets/stylesheets/api/notes.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the api/Notes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.note-show-header input[type="submit"] {
+  color: #FFFFFF;
+  background-color: #2DBE60;
+  border: 1px solid #2DBE60;
+  border-radius: 5px;
+  font-size: 14px;
+  padding: 2px 14px;
+}
+
+.note-show-header input[type="submit"]:hover {
+  background-color: #28A955;
+}
