--- a/app/assets/stylesheets/api/notebooks.scss
+++ b/app/assets/stylesheets/api/notebooks.scss
@@ -11,6 +11,7 @@
   // move width to modal once created
   width: 460px;
   height: 100%;
+  z-index: 100;
 }
 
 .notebooks-overlay-header {
@@ -28,6 +29,10 @@
 
 .notebooks-overlay-create img {
   width: 24px;
+}
+
+.notebooks-overlay-nbs-list {
+  overflow: scroll;
 }
 
 .notebooks-overlay-nbs-list .notebook-items div {
@@ -54,10 +59,6 @@
 .notebooks-overlay-nbs-list .notebook-items div:hover {
   background: #2DBE60;
   color: #FFFFFF;
-}
-
-.notebook-items {
-  overflow: scroll;
 }
 
 
