--- a/app/assets/stylesheets/session_page.scss
+++ b/app/assets/stylesheets/session_page.scss
@@ -88,7 +88,7 @@
   border-bottom: 1px solid #ECECEC;
 }
 
-.items {
+.note-sidebar-list-items {
   overflow: scroll;
 }
 
@@ -146,7 +146,7 @@
 }
 
 .note-show-container {
-  height: 600px;
+  height: 550px;
   width: 750px;
   position: relative;
   top: 0;
@@ -155,11 +155,17 @@
   padding: 20px;
 }
 
+.note-show-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .note-show-container input[type="text"] {
   color: #2DBE60;
   font-size: 28px;
   font-weight: 300;
   border: none;
   padding: 0px 0px 20px 0px;
-  width: 600px;
+  width: 500px;
 }
