Add delete icons to all list items and style nav links

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,3 +219,7 @@ h6 {
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
 }
+
+.note-sidebar-list-items {
+  overflow: scroll;
+}
