--- a/app/assets/stylesheets/session_page.scss
+++ b/app/assets/stylesheets/session_page.scss
@@ -36,11 +36,19 @@
 }
 
 .left-nav-buttons ul li {
-  font-size: 10px;
-  padding: 10px;
+  font-size: 11px;
+  padding: 35px 5px;
   margin: 0 auto;
+}
 
+.left-nav-buttons ul li a {
+  font-weight: 500;
+  color: #2DBE60;
+  text-decoration: none;
+}
 
+.left-nav-buttons ul li a:hover {
+  color: #0D9F40;
 }
 
 .left-nav-logout {
