--- a/app/assets/stylesheets/session_page.scss
+++ b/app/assets/stylesheets/session_page.scss
@@ -136,13 +136,20 @@
 	display: flex;
 	flex-direction: column;
 	height: 100px;
-	overflow: hidden;
+	// overflow: hidden;
 }
 
 .note-preview-header {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
+	position: absolute;
+}
+
+.note-preview-description {
+	margin-top: 15px;
+	padding-bottom: 1px;
+	overflow: hidden;
 }
 
 .note-preview-title {
@@ -156,6 +163,8 @@
 	font-size: 11px;
 	font-weight: 400;
 	color: #878787;
+	position: absolute;
+	margin: 8px 0px;
 }
 
 .note-show-container {
