--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,6 +23,14 @@ body {
 	overflow: hidden;
 }
 
+em {
+	font-style: italic;
+}
+
+strong {
+	font-weight: bold;
+}
+
 .container {
 	/* border: 2px solid orange; */
 	/* width: 80%; */
