Change links to navlinks

--- a/app/assets/stylesheets/session_page.scss
+++ b/app/assets/stylesheets/session_page.scss
@@ -133,6 +133,10 @@
 	color: #ffffff;
 }
 
+.selected-note-preview {
+	border: 3px solid #d9d9d9;
+}
+
 .note-preview {
 	padding: 10px;
 	margin: 0px 10px;
